update: restructure using tailwind css

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,20 +1,11 @@
 {
   "printWidth": 80,
-  "tabWidth": 4,
+  "tabWidth": 2,
   "semi": true,
   "trailingComma": "es5",
   "singleQuote": true,
   "useTabs": false,
   "bracketSpacing": true,
   "jsxBracketSameLine": true,
-  "arrowParens": "always",
-  "overrides": [
-    {
-      "files": ["*.json", ".prettierrc", ".babelrc", ".eslintrc"],
-      "options": {
-        "parser": "json",
-        "tabWidth": 2
-      }
-    }
-  ]
+  "arrowParens": "always"
 }
