--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "prettier": "prettier --write src/**/*.{js,jsx,json}"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.6",
     "classnames": "^2.2.6",
-    "cross-fetch": "^3.0.4",
     "debug": "^4.1.1",
     "moment": "^2.24.0",
-    "next": "^9.2.1",
+    "next": "^9.5.2",
+    "next-seo": "^4.7.3",
+    "postcss": "^7.0.32",
     "react": "^16.12.0",
-    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.12.0",
+    "tailwindcss": "^1.7.3",
     "utf8": "^3.0.0"
   },
   "keywords": [
@@ -36,7 +38,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.3",
     "eslint": "^7.7.0",
-    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react": "^7.20.6",
     "prettier": "^2.0.5"
   }
 }
